--- a/web学习笔记/vue/项目.md
+++ b/web学习笔记/vue/项目.md
@@ -1,10 +1,99 @@
 # 项目
 
-目录结构
+### 目录结构
 
-componen 放公共组件，component/common在别的项目也可以使用，content 在当前项目的需要的业务代码
+components 放公共组件，component/common在别的项目也可以使用，content 在当前项目的需要的业务代码
 
 views放大的视图组件
 
-common 放公用的js文件
+common 放公用的js文件，
 
+### **项目初配置规定：**
+
+assests/css/base.css: 
+
+* css重置
+
+关于normalize.css(npm安装npm install --save normalize.css)
+
+[Normalize.css](http://necolas.github.com/normalize.css/)是一个小的CSS文件，可在HTML元素的默认样式中提供更好的跨浏览器一致性。这是一种现代的，支持HTML5的版本，可替代传统的CSS重置。
+
+```
+@import "normalize.css";//导入
+```
+
+
+
+* 可以定义一些项目常用的样式变量
+
+```
+/*定义一些常用的变量，代替常用样式*/
+    --color-text:#666;
+    /*//高亮字体*/
+    --color-height-text:#ff5777;
+    /*tintColor*/
+    --color-tint:#ff8198;
+    --color-background:#fff;
+    --font-size:14px;
+    --line-height:1.5;
+```
+
+* 默认样式
+
+```
+body{
+    padding:0;
+    margin:0;
+    /*font-family: ;*/
+}
+```
+
+项目根目录下：
+
+增加.editorconfig文件，目的：统一代码格式
+
+```
+root = true
+
+[*]
+charset = utf-8//编码格式
+indent_style = space
+indent_size = 2//缩进
+end_of_line = lf
+insert_final_newline = true
+trim_trailing_whitespace = true
+
+```
+
+增加vue.config.js=>文件夹起别名
+
+```
+module.exports = {
+  configureWebpack:{
+    resolve:{
+      alias:{
+        // '@':'src',//脚手架cl4默认
+          'assets':'@/assets',
+          'components':'@/components',
+          'network':'@/network',
+          'router':'@/router',
+          'views':'@/views',
+          'common':'@/common',
+          'store':'@/store'
+      }
+    }
+  }
+}
+```
+
+
+
+顶部的navbar的高度line-height:44px，height:44px;
+
+底部的tabbar高度是49px
+
+阴影box-shadow:0 1px 1px rgba(100,100,100 ,.1)
+
+
+
+轮播图
